Add make app offline capable for web w/ serviceworkers

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         <title></title>
     </head>
     <body>
+        <div id="offline-banner">Pokedex is now available offline!</div>
         <div id="app"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/app.bundle.js"></script>
